[project]
name = "RLatScale"
version = "0.1.0"
description = "Investigation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "SearLater" }]
requires-python = ">=3.11,<3.12"

dependencies = [
    "jax>=0.4.0",
    "gymnasium>=1.3.0",
    "tqdm>=4.67.3",
    "ufal-pybox2d>=2.3.10.5",
    "gymnax>=0.0.9",
    "flax>=0.12.7",
    "equinox>=0.13.8",
    "brax>=0.14.2",
    "mujoco>=3.8.1",
    "rliable>=1.2.0",
    "pandas==2.2.3",
    "arch>=7.2",
    "numpy>=2.4.5",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
gpu = [
    "jax[cuda12]>=0.4.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[project.urls]
Repository = "https://github.com/SearLater/RLatScale"
Issues = "https://github.com/SearLater/RLatScale/issues"

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
